Added header component

--- a/index.html
+++ b/index.html
@@ -67,6 +67,56 @@
         </ul>
 
         <h3>Inline Lists</h3>
+        <p>
+            This is a list with items being placed horizontally.
+        </p>
+        <ul>
+            <li>Inline item 1</li>
+            <li>Inline item 2</li>
+            <li>Inline item 3</li>
+        </ul>
+        <!-- ------------------------------------------------------------ -->
+        <h3>Reverse Ordered List</h3>
+        <ol>
+            <li>Milk</li>
+            <li>Eggs</li>
+            <li>Bread</li>
+        </ol>
 
+        <hr>
+        <!-- ------------------------------------------------------------ -->
+        <h2># Nav</h2>
+
+        <nav>
+            <div>Navigation</div>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About Me</a>
+                </li>
+                <li>
+                    <a href="#">Projects</a>
+                </li>
+            </ul>
+        </nav>
+
+        <hr>
+        <!-- ------------------------------------------------------------ -->
+        <h2># Header</h2>
+
+        <header>
+            <img src="images/hero.svg" width="300px">
+            <h1>Heading inside hero</h1>
+        </header>
+
+        <!-- ------------------------------------------------------------ -->
+
+        <!-- ------------------------------------------------------------ -->
+
+        <!-- ------------------------------------------------------------ -->
+
+        <!-- ------------------------------------------------------------ -->
     </body>
 </html>
