Completed the HTML part

--- a/index.html
+++ b/index.html
@@ -111,12 +111,30 @@
             <h1>Heading inside hero</h1>
         </header>
 
+        <hr>
         <!-- ------------------------------------------------------------ -->
+        <h2># Sections</h2>
 
+        <section>
+            <h3>White Section</h3>
+            <p>This will have a White background.</p>
+        </section>
+
+        <section>
+            <h3>Grey Section</h3>
+            <p>This will have a Grey background.</p>
+        </section>
+
+        <hr>
         <!-- ------------------------------------------------------------ -->
+        <h2># Footer</h2>
 
-        <!-- ------------------------------------------------------------ -->
-
+        <div>Some small heading inside the footer</div>
+        <ul>
+            <li>Social 1</li>
+            <li>Social 2</li>
+            <li>Social 3</li>
+        </ul>
         <!-- ------------------------------------------------------------ -->
     </body>
 </html>
