--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Component Library</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>This is a component library by Udayan.</h1>
