--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </p>
         <hr>
 
-        <h2># Typography</h2>
+        <h2>#Typography</h2>
         <h1>This is the largest heading</h1>
         <h2>This is the second largest heading</h2>
 
@@ -32,53 +32,54 @@
         <small>This is relatively smaller text.</small>
 
         <hr>
+
         <!-- ------------------------------------------------------------ -->
-        <h2># Container</h2>
+        <h2>#Container</h2>
 
         <h3>Fluid Container</h3>
-        <div>
+        <div class="container container-fluid">
             This is a fluid container that goes till the end of the page.
         </div>
 
         <h3>Center Container</h3>
-        <div>
+        <div class="container container-center">
             This is a center container that fills a given width and centers the
             content inside it.
         </div>
 
         <hr>
         <!-- ------------------------------------------------------------ -->
-        <h2># Links</h2>
+        <h2>#Links</h2>
 
-        <a href="#">Primary Link</a> 
-        <a href="#">Secondary link</a>
+        <a href="#" class="link primary-link">Primary Link</a> 
+        <a href="#" class="link secondary-link">Secondary link</a>
 
         <hr>
         <!-- ------------------------------------------------------------ -->
-        <h2># Lists</h2>
+        <h2>#Lists</h2>
 
         <h3>Unordered Lists</h3>
         <p>
             Bullets can be made visible/hidden with CSS.
         </p>
-        <ul>
+        <ul class="list-non-bullet">
             <li>Item 1</li>
             <li>Item 2</li>
             <li>Item 3</li>
         </ul>
 
-        <h3>Inline Lists</h3>
+        <h3>Unordered Inline Lists</h3>
         <p>
             This is a list with items being placed horizontally.
         </p>
-        <ul>
-            <li>Inline item 1</li>
-            <li>Inline item 2</li>
-            <li>Inline item 3</li>
+        <ul class="list-non-bullet">
+            <li class="list-item-inline">Inline item 1</li>
+            <li class="list-item-inline">Inline item 2</li>
+            <li class="list-item-inline">Inline item 3</li>
         </ul>
         <!-- ------------------------------------------------------------ -->
         <h3>Reverse Ordered List</h3>
-        <ol>
+        <ol reversed>
             <li>Milk</li>
             <li>Eggs</li>
             <li>Bread</li>
@@ -86,26 +87,26 @@
 
         <hr>
         <!-- ------------------------------------------------------------ -->
-        <h2># Nav</h2>
+        <h2>#Nav</h2>
 
-        <nav>
-            <div>Navigation</div>
-            <ul>
-                <li>
-                    <a href="#">Home</a>
+        <nav class="navigation container">
+            <div class="nav-brand">Navigation</div>
+            <ul class="list-non-bullet nav-pills">
+                <li class="list-item-inline">
+                    <a href="#" class="link link-active">Home</a>
                 </li>
-                <li>
-                    <a href="#">About Me</a>
+                <li class="list-item-inline">
+                    <a href="#" class="link">About Me</a>
                 </li>
-                <li>
-                    <a href="#">Projects</a>
+                <li class="list-item-inline">
+                    <a href="#" class="link">Projects</a>
                 </li>
             </ul>
         </nav>
 
         <hr>
         <!-- ------------------------------------------------------------ -->
-        <h2># Header</h2>
+        <h2>#Header</h2>
 
         <header>
             <img src="images/hero.svg" width="300px">
@@ -114,7 +115,7 @@
 
         <hr>
         <!-- ------------------------------------------------------------ -->
-        <h2># Sections</h2>
+        <h2>#Sections</h2>
 
         <section>
             <h3>White Section</h3>
@@ -128,7 +129,7 @@
 
         <hr>
         <!-- ------------------------------------------------------------ -->
-        <h2># Footer</h2>
+        <h2>#Footer</h2>
 
         <div>Some small heading inside the footer</div>
         <ul>
