--- a/index.html
+++ b/index.html
@@ -108,23 +108,27 @@
         <!-- ------------------------------------------------------------ -->
         <h2>#Header</h2>
 
-        <header>
-            <img src="images/hero.svg" width="300px">
-            <h1>Heading inside hero</h1>
+        <header class="hero">
+            <img src="images/hero.svg" class="hero-img">
+            <h1 class="hero-heading">Heading inside hero</h1>
         </header>
 
         <hr>
         <!-- ------------------------------------------------------------ -->
         <h2>#Sections</h2>
 
-        <section>
-            <h3>White Section</h3>
-            <p>This will have a White background.</p>
+        <section class="section">
+            <div class="container container-center">
+                <h1>White Section</h1>
+                <p>This will have a White background.</p>
+            </div>
         </section>
 
-        <section>
-            <h3>Grey Section</h3>
-            <p>This will have a Grey background.</p>
+        <section class="section ow">
+            <div class="container container-center">
+                <h1>Grey Section</h1>
+                <p>This will have a Grey background.</p>
+            </div>
         </section>
 
         <hr>
