--- a/index.html
+++ b/index.html
@@ -135,12 +135,20 @@
         <!-- ------------------------------------------------------------ -->
         <h2>#Footer</h2>
 
-        <div>Some small heading inside the footer</div>
-        <ul>
-            <li>Social 1</li>
-            <li>Social 2</li>
-            <li>Social 3</li>
-        </ul>
+        <footer class="footer container">
+            <div class="footer-header">Some small heading inside the footer</div>
+            <ul class="social-links list-non-bullet">
+                <li class="list-item-inline">
+                    <a class="link" href="#">Social 1</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="link" href="#">Social 2</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="link" href="#">Social 3</a>
+                </li>
+            </ul>
+        </footer>
         <!-- ------------------------------------------------------------ -->
     </body>
 </html>
